--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    Hello
+    <main class="section">
+        <div class="logo">
+            <div>
+                <a href="#">Launch</a>
+            </div>
+        </div>
+        <div>
+            <h1>We Are Coming Very Soon!</h1>
+            <p>Free html5 templates Made by <span>freehtml5.co</span></p> 
+        </div>
+        <div class="time">
+            <div>266 day</div>
+            <div>4 hours</div>
+            <div>21 minutes</div>
+            <div>5 seconds</div>
+        </div>
+        <div>
+            <p>Notify me when it's ready</p>
+            <form>
+                <input type="email" label="Get notify by email">
+                <button>Send</button>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+            </form>
+        </div>
+    </main>
+    <link rel="stylesheet" href="style/style.css">
 </body>
 </html>
