--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             </form>
         </div>
     </main>
+    <footer>
+        <div> 
+            <p>© 2016 Free HTML5. All Rights Reserved. <br>
+                Designed by <span>FREEHTML5.co</span> Demo Images: <span>Unsplash</span>
+            </p>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+        </div>
+    </footer>
     <link rel="stylesheet" href="style/style.css">
 </body>
 </html>
