--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <main class="section">
         <div class="logo">
             <div>
-                <a href="#">Launch</a>
+                <a href="#">Launch.</a>
             </div>
         </div>
         <div>
-            <h1>We Are Coming Very Soon!</h1>
-            <p>Free html5 templates Made by <span>freehtml5.co</span></p> 
+            <h1 class="main_text">We Are Coming Very Soon!</h1>
+            <p class="main_p">Free html5 templates Made by <span> freehtml5.co</span></p> 
         </div>
         <div class="time">
             <div>266 day</div>
@@ -35,7 +35,7 @@
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="section">
         <div> 
             <p>© 2016 Free HTML5. All Rights Reserved. <br>
                 Designed by <span>FREEHTML5.co</span> Demo Images: <span>Unsplash</span>
