--- a/index.html
+++ b/index.html
@@ -18,21 +18,26 @@
             <p class="main_p">Free html5 templates Made by <span> freehtml5.co</span></p> 
         </div>
         <div class="time">
-            <div>266 day</div>
-            <div>4 hours</div>
-            <div>21 minutes</div>
-            <div>5 seconds</div>
+            <div>266 <br/> <span>day</span> </div>
+            <div>4 <br/> <span>hours</span></div>
+            <div>21 <br/> <span>minutes</span></div>
+            <div>5 <br/> <span>seconds</span></div>
         </div>
-        <div>
-            <p>Notify me when it's ready</p>
-            <form>
-                <input type="email" label="Get notify by email">
-                <button>Send</button>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-            </form>
+        <div class="flex social">
+            <div class="flex">
+                <p class="social_p">Notify me when it's ready</p>
+            </div>
+            <div class="flex">
+                <form>
+                    <input type="email" label="Get notify by email">
+                    <button>Send</button>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                    <div><img src="" alt=""></div>
+                </form>
+            </div>
+
         </div>
     </main>
     <footer class="section">
