--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
             </div>
             <div class="flex">
                 <form>
-                    <input type="email" label="Get notify by email">
+                    <input type="email" placeholder="Get notify by email">
                     <button>Send</button>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
-                    <div><img src="" alt=""></div>
+                    <div class="img">
+                        <div><img src="./images/facebook.svg" alt="facebook"></div>
+                        <div><img src="./images/instacart.svg" alt="instacart"></div>
+                        <div><img src="./images/twitter.svg" alt="twitter"></div>
+                        <div><img src="./images/vk.svg" alt="VK"></div>
+                    </div>
                 </form>
             </div>
 
@@ -48,10 +50,12 @@
             <p>© 2016 Free HTML5. All Rights Reserved. <br>
                 Designed by <span>FREEHTML5.co</span> Demo Images: <span>Unsplash</span>
             </p>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
-            <div><img src="" alt=""></div>
+            <div class="img">
+                <div><img src="./images/facebook.svg" alt="facebook"></div>
+                <div><img src="./images/instacart.svg" alt="instacart"></div>
+                <div><img src="./images/twitter.svg" alt="twitter"></div>
+                <div><img src="./images/vk.svg" alt="VK"></div>
+            </div>
         </div>
     </footer>
     <link rel="stylesheet" href="style/style.css">
