--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
             <p>© 2016 Free HTML5. All Rights Reserved. <br>
                 Designed by <span>FREEHTML5.co</span> Demo Images: <span>Unsplash</span>
             </p>
-            <div class="img">
-                <div><img src="./images/facebook.svg" alt="facebook"></div>
-                <div><img src="./images/instacart.svg" alt="instacart"></div>
-                <div><img src="./images/twitter.svg" alt="twitter"></div>
-                <div><img src="./images/vk.svg" alt="VK"></div>
+            <div class="img_border">
+                <div class="img">
+                    <div><img src="./images/facebook.svg" alt="facebook"></div>
+                    <div><img src="./images/instacart.svg" alt="instacart"></div>
+                    <div><img src="./images/twitter.svg" alt="twitter"></div>
+                    <div><img src="./images/vk.svg" alt="VK"></div>
+                </div>
             </div>
         </div>
     </footer>
