--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 Designed by <span>FREEHTML5.co</span> Demo Images: <span>Unsplash</span>
             </p>
             <div class="img_border">
-                <div class="img">
+                <div class="img mob_logo">
                     <div><img src="./images/facebook.svg" alt="facebook"></div>
                     <div><img src="./images/instacart.svg" alt="instacart"></div>
                     <div><img src="./images/twitter.svg" alt="twitter"></div>
