--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
     <link type="image/x-icon" href="./images/favicon.ico" rel="shortcut icon">
     <title>Launch</title>
 </head>
@@ -20,10 +21,10 @@
             <p class="main_p">Free html5 templates Made by <span> freehtml5.co</span></p> 
         </div>
         <div class="time">
-            <div>266 <br/> <span>day</span> </div>
-            <div>4 <br/> <span>hours</span></div>
-            <div>21 <br/> <span>minutes</span></div>
-            <div>5 <br/> <span>seconds</span></div>
+            <div><p id="d"></p> <span>days</span> </div>
+            <div><p id="h"></p> <span>hours</span></div>
+            <div><p id="m"></p> <span>minutes</span></div>
+            <div><p id="s"></p><span>seconds</span></div>
         </div>
         <div class="flex social">
             <div class="flex">
@@ -59,8 +60,6 @@
             </div>
         </div>
     </footer>
-    
-    <link rel="stylesheet" href="style/style.css">
     <script src="./main.js"></script>
 </body>
 </html>
