--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         </div>
         <div class="flex social">
             <div class="flex">
-                <p class="social_p">Notify me when it's ready</p>
+                <p class="social_p social_p_margin">Notify me when it's ready</p>
             </div>
             <div class="flex">
                 <form>
                     <input type="email" placeholder="Get notify by email">
                     <button>Send</button>
-                    <div class="img">
+                    <div class="img social-wight social-margin">
                         <div><img src="./images/facebook.svg" alt="facebook"></div>
                         <div><img src="./images/instacart.svg" alt="instacart"></div>
                         <div><img src="./images/twitter.svg" alt="twitter"></div>
