--- a/index.html
+++ b/index.html
@@ -35,10 +35,26 @@
                     <input type="email" placeholder="Get notify by email">
                     <button>Send</button>
                     <div class="img social-wight social-margin">
-                        <div><img src="./images/facebook.svg" alt="facebook"></div>
-                        <div><img src="./images/instacart.svg" alt="instacart"></div>
-                        <div><img src="./images/twitter.svg" alt="twitter"></div>
-                        <div><img src="./images/vk.svg" alt="VK"></div>
+                        <div>
+                            <a href="#">
+                                <img src="./images/facebook.svg" href="#" alt="facebook">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <img src="./images/instacart.svg" alt="instacart">
+                            </a>    
+                        </div>
+                        <div>
+                            <a href="#">
+                                <img src="./images/twitter.svg" alt="twitter">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <img src="./images/vk.svg" alt="VK">
+                            </a>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -52,10 +68,26 @@
             </p>
             <div class="img_border">
                 <div class="img mob_logo">
-                    <div><img src="./images/facebook.svg" alt="facebook"></div>
-                    <div><img src="./images/instacart.svg" alt="instacart"></div>
-                    <div><img src="./images/twitter.svg" alt="twitter"></div>
-                    <div><img src="./images/vk.svg" alt="VK"></div>
+                    <div>
+                        <a href="#">
+                            <img src="./images/facebook.svg" href="#" alt="facebook">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./images/instacart.svg" alt="instacart">
+                        </a>    
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./images/twitter.svg" alt="twitter">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img src="./images/vk.svg" alt="VK">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
